[tool.poetry]
name = "composio"
version = "0.1.0"
description = ""
authors = ["Yash Agarwal <yashagarwal@allohealth.care>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
composio-core = "^0.1.93"
composio-langchain = "^0.1.93"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
